test/syntax/fail/merge_branches_with_diff_type.sync
type state =
  | S0
  | S1
  | S2

let f (s : state) =
  merge s (S0 -> 0) (S1 -> true) (S2 -> 2)
